--- a/css/style.css
+++ b/css/style.css
@@ -17,15 +17,18 @@ form {
   /* width: 50%; */
   /* margin-right: 50px; */
   height: 100vh;
-  display: flex;
-  justify-content: center;
+  /* display: flex;
+  justify-content: center; */
 }
 .login_page{
-  width:px;
+  /* width:px; */
 }
 
 .login form {
-  align-self: center;
+  /* align-self: center; */
+  width: 40%;
+  margin: 10% auto 0 auto;
+  background-color: #e8e8e8;
 }
 /* .form-labellogin {
   color: rgb(0, 0, 0);
